add connection to Zotero

--- a/references.bib
+++ b/references.bib
@@ -1,17 +1,258 @@
-@inproceedings{christen_exogenous_2020,
-	address = {Budapest, Hungary},
-	title = {Exogenous {Data} for {Load} {Forecasting}: {A} {Review}:},
-	copyright = {All rights reserved},
-	isbn = {978-989-758-475-6},
-	shorttitle = {Exogenous {Data} for {Load} {Forecasting}},
-	url = {https://www.scitepress.org/DigitalLibrary/Link.aspx?doi=10.5220/0010213204890500},
-	doi = {10.5220/0010213204890500},
-	language = {en},
-	urldate = {2020-11-16},
-	booktitle = {Proceedings of the 12th {International} {Joint} {Conference} on {Computational} {Intelligence}},
-	publisher = {SCITEPRESS - Science and Technology Publications},
-	author = {Christen, Ramón and Mazzola, Luca and Denzler, Alexander and Portmann, Edy},
-	year = {2020},
-	keywords = {phd.mono.cited},
-	pages = {489--500},
+
+@article{jond_connected_2023,
+	title = {Connected and Automated Vehicle Platoon Formation Control via Differential Games},
+	volume = {17},
+	issn = {1751-956X, 1751-9578},
+	url = {http://arxiv.org/abs/2202.02602},
+	doi = {10.1049/itr2.12260},
+	abstract = {In this study, the connected and automated vehicles ({CAVs}) platooning problem is resolved under a diﬀerential game framework. Three information topologies are considered here. Firstly, Predecessor-following ({PF}) topology is utilized where the vehicles control the distance with respect to the merely nearest predecessor via a sensor link-based information ﬂow. Secondly, Two-predecessor-following topology ({TPF}) is exploited where each vehicle controls the distance with respect to the two nearest predecessors. In this topology, the second predecessor is communicated via a Vehicle-to-vehicle (V2V) link. The individual trajectories of {CAVs} under the Nash equilibrium are derived in closed-form for these two information topologies. Finally, general information topology is examined and the diﬀerential game is formulated in this context. In all these options, Pontryagin’s principle is employed to investigate the existence and uniqueness of the Nash equilibrium and obtain its corresponding trajectories. In the general topology, we suppose numerical computation of eigenvalues and eigenvectors. All these approaches represent promising and powerful analytical representations of the {CAV} platoons under the diﬀerential games. Simulation experiments have veriﬁed the eﬃciency of the proposed models and their solutions.},
+	pages = {312--326},
+	number = {2},
+	journaltitle = {{IET} Intelligent Transport Systems},
+	shortjournal = {{IET} Intelligent Trans Sys},
+	author = {Jond, Hossein B. and Yıldız, Aykut},
+	urldate = {2026-02-04},
+	date = {2023-02},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {2202.02602 [eess]},
+	keywords = {Electrical Engineering and Systems Science - Systems and Control},
+}
+
+@inproceedings{hoffmann_autonomous_2007,
+	location = {New York, {NY}, {USA}},
+	title = {Autonomous Automobile Trajectory Tracking for Off-Road Driving: Controller Design, Experimental Validation and Racing},
+	isbn = {978-1-4244-0988-4 978-1-4244-0989-1},
+	issn = {0743-1619},
+	url = {http://ieeexplore.ieee.org/document/4282788/},
+	doi = {10.1109/ACC.2007.4282788},
+	shorttitle = {Autonomous Automobile Trajectory Tracking for Off-Road Driving},
+	abstract = {This paper presents a nonlinear control law for an automobile to autonomously track a trajectory, provided in real-time, on rapidly varying, off-road terrain. Existing methods can suffer from a lack of global stability, a lack of tracking accuracy, or a dependence on smooth road surfaces, any one of which could lead to the loss of the vehicle in autonomous offroad driving. This work treats automobile trajectory tracking in a new manner, by considering the orientation of the front wheels – not the vehicle’s body – with respect to the desired trajectory, enabling collocated control of the system. A steering control law is designed using the kinematic equations of motion, for which global asymptotic stability is proven. This control law is then augmented to handle the dynamics of pneumatic tires and of the servo-actuated steering wheel. To control vehicle speed, the brake and throttle are actuated by a switching proportional integral ({PI}) controller. The complete control system consumes a negligible fraction of a computer’s resources. It was implemented on a Volkswagen Touareg, “Stanley”, the Stanford Racing Team’s entry in the {DARPA} Grand Challenge 2005, a 132 mi autonomous off-road race. Experimental results from Stanley demonstrate the ability of the controller to track trajectories between obstacles, over steep and wavy terrain, through deep mud puddles, and along cliff edges, with a typical root mean square ({RMS}) crosstrack error of under 0.1 m. In the {DARPA} National Qualiﬁcation Event 2005, Stanley was the only vehicle out of 40 competitors to not hit an obstacle or miss a gate, and in the {DARPA} Grand Challenge 2005 Stanley had the fastest course completion time.},
+	eventtitle = {2007 American Control Conference},
+	pages = {2296--2301},
+	booktitle = {2007 American Control Conference},
+	publisher = {{IEEE}},
+	author = {Hoffmann, Gabriel M. and Tomlin, Claire J. and Montemerlo, Michael and Thrun, Sebastian},
+	urldate = {2026-02-04},
+	date = {2007-07},
+	langid = {english},
+}
+
+@inproceedings{gu_toward_2014,
+	location = {{MI}, {USA}},
+	title = {Toward human-like motion planning in urban environments},
+	isbn = {978-1-4799-3638-0},
+	url = {http://ieeexplore.ieee.org/document/6856493/},
+	doi = {10.1109/IVS.2014.6856493},
+	abstract = {Prior autonomous navigation systems focused on the demonstration of the technological feasibility. But as the technology evolves, improving user experience through learning expert’s or individual’s driving pattern emerges as a promising research direction. As a ﬁrst step toward this goal, we investigate methods to learn from human demonstrations in urban scenarios without any environmental disturbances (trafﬁc-free). We propose a path model that generates a reference path with smooth and peak-value-reduced curvature, and a parameterized speed model to be ﬁtted by human driving data. Model parameters are then learned through regression methods, and certain statistical human driving patterns are revealed. The learned model is then evaluated by comparing the generated plan with the collected data by the same human driver.},
+	eventtitle = {2014 {IEEE} Intelligent Vehicles Symposium ({IV})},
+	pages = {350--355},
+	booktitle = {2014 {IEEE} Intelligent Vehicles Symposium Proceedings},
+	publisher = {{IEEE}},
+	author = {Gu, Tianyu and Dolan, John M.},
+	urldate = {2026-02-04},
+	date = {2014-06},
+	langid = {english},
+}
+
+@article{fernandez_vehicle_nodate,
+	title = {A Vehicle Dynamics Model for Driving Simulators},
+	abstract = {Driving simulators play an important role in research concerning mainly human factors and the development of new advanced driver assistance systems. Since the human body is a very sensitive “machine”, driving simulator experiences must be as close as possible to reality, in order to conduct simulator experiments that generate accurate results, so they can be extrapolated to real driving situations.},
+	author = {Fernández, Jorge Gómez},
+	langid = {english},
+}
+
+@article{abdelmoniem_path-tracking_2020,
+	title = {A path-tracking algorithm using predictive Stanley lateral controller},
+	volume = {17},
+	issn = {1729-8806, 1729-8814},
+	url = {https://journals.sagepub.com/doi/10.1177/1729881420974852},
+	doi = {10.1177/1729881420974852},
+	abstract = {Path tracking is one of the most important aspects of autonomous vehicles. The current research focuses on designing path-tracking controllers taking into account the stability of the yaw and the nonholonomic constraints of the vehicle. In most cases, the lateral controller design relies on identifying a path reference point, the one with the shortest distance to the vehicle giving the current state of the vehicle. That restricts the controller’s ability to handle sudden changes of the trajectory heading angle. The present article proposes a new approach that imitates human behavior while driving. It is based on a discrete prediction model that anticipates the future states of the vehicle, allowing the use of the control algorithm in future predicted states augmented with the current controller output. The performance of the proposed approach is verified through several simulations on V-{REP} simulator with different types of maneuvers (double lane change, hook road, S road, and curved road) and a wide range of velocities. Predictive Stanley controller was used compared to the original Stanley controller. The obtained results of the proposed control approach show the advantage and the performance of the technique in terms of minimizing the lateral error and ensuring yaw stability by an average of 53\% and 22\%, respectively.},
+	pages = {1729881420974852},
+	number = {6},
+	journaltitle = {International Journal of Advanced Robotic Systems},
+	shortjournal = {International Journal of Advanced Robotic Systems},
+	author = {{AbdElmoniem}, Ahmed and Osama, Ahmed and Abdelaziz, Mohamed and Maged, Shady A},
+	urldate = {2026-02-04},
+	date = {2020-11-01},
+	langid = {english},
+}
+
+@article{zhang_bayesian_2024,
+	title = {Bayesian Calibration of the Intelligent Driver Model},
+	volume = {25},
+	issn = {1524-9050, 1558-0016},
+	url = {http://arxiv.org/abs/2210.03571},
+	doi = {10.1109/TITS.2024.3354102},
+	abstract = {Accurate calibration of car-following models is essential for understanding human driving behaviors and implementing high-fidelity microscopic simulations. This work proposes a memory-augmented Bayesian calibration technique to capture both uncertainty in the model parameters and the temporally correlated behavior discrepancy between model predictions and observed data. Specifically, we characterize the parameter uncertainty using a hierarchical Bayesian framework and model the temporally correlated errors using Gaussian processes. We apply the Bayesian calibration technique to the intelligent driver model ({IDM}) and develop a novel stochastic car-following model named memory-augmented {IDM} ({MA}-{IDM}). To evaluate the effectiveness of {MA}-{IDM}, we compare the proposed {MA}-{IDM} with Bayesian {IDM} in which errors are assumed to be i.i.d., and our simulation results based on the {HighD} dataset show that {MA}-{IDM} can generate more realistic driving behaviors and provide better uncertainty quantification than Bayesian {IDM}. By analyzing the lengthscale parameter of the Gaussian process, we also show that taking the driving actions from the past five seconds into account can be helpful in modeling and simulating the human driver’s car-following behaviors.},
+	pages = {9308--9320},
+	number = {8},
+	journaltitle = {{IEEE} Transactions on Intelligent Transportation Systems},
+	shortjournal = {{IEEE} Trans. Intell. Transport. Syst.},
+	author = {Zhang, Chengyuan and Sun, Lijun},
+	urldate = {2026-02-04},
+	date = {2024-08},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {2210.03571 [stat]},
+	keywords = {Statistics - Applications},
+}
+
+@article{wang_driving_2016,
+	title = {Driving safety field theory modeling and its application in pre-collision warning system},
+	volume = {72},
+	issn = {0968090X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0968090X16301887},
+	doi = {10.1016/j.trc.2016.10.003},
+	abstract = {The concept and contents of driving safety ﬁeld theory were presented in our previous study. On this basis, this study focus on driving safety ﬁeld theory modeling and application. First, a general model is presented, which considered the driver-vehicle-road interactions. The model include the following three parts: (i) driver behaviors, which are determined by driver characteristics, such as physical-psychological, cognition, driving skill, and trafﬁc violations; (ii) vehicle characteristics, which are determined by velocity vectors and virtual masses of vehicles; (iii) road conditions, which are determined by virtual mass of on road non-moving objects, types of trafﬁc signs, road adhesion coefﬁcient, road slope, road curvature, and visibility. In order to establish concrete functional forms, the speciﬁc model is presented. This speciﬁc model provides a method for virtual mass calculation and describes the ﬁeld strength and ﬁeld force in detail. After that, a driving safety indicator namely {DSI} is deﬁned. Finally, a vehicle collision warning algorithm based on driving safety ﬁeld model is presented. This algorithm used a new index namely {RDSI} to evaluate the driving risk level. The effectiveness of this collision warning algorithm is veriﬁed by ﬁeld experiments.},
+	pages = {306--324},
+	journaltitle = {Transportation Research Part C: Emerging Technologies},
+	shortjournal = {Transportation Research Part C: Emerging Technologies},
+	author = {Wang, Jianqiang and Wu, Jian and Zheng, Xunjia and Ni, Daiheng and Li, Keqiang},
+	urldate = {2026-02-04},
+	date = {2016-11},
+	langid = {english},
+}
+
+@article{wang_driving_2015,
+	title = {The Driving Safety Field Based on Driver–Vehicle–Road Interactions},
+	volume = {16},
+	rights = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/{IEEE}.html},
+	issn = {1524-9050, 1558-0016},
+	url = {http://ieeexplore.ieee.org/document/7050373/},
+	doi = {10.1109/TITS.2015.2401837},
+	abstract = {Vehicle driving safety is inﬂuenced by many factors, including drivers, vehicles, and road environments. The interactions among them are quite complex. Consequently, existing methods that evaluate driving safety perform inadequately because they only consider limited factors and their interactions. As such, it is difﬁcult for kinematics-based and dynamics-based vehicle driving safety assistant systems to adapt to increasingly complex trafﬁc environments. In this paper, we propose a new concept, i.e., the driving safety ﬁeld. The concept makes use of ﬁeld theory to represent risk factors owing to drivers, vehicles, road conditions, and other trafﬁc factors. A uniﬁed model of the driving safety ﬁeld is constructed, which includes the following three parts: 1) a potential ﬁeld, which is determined by nonmoving objects on the roads, such as a stopped vehicle; 2) a kinetic ﬁeld, which is determined by the moving objects on roads, such as vehicles and pedestrians; and 3) a behavior ﬁeld, which is determined by the individual characteristics of drivers. Moreover, the applications of the model are proposed, and its application to a typical carfollowing scenario is illustrated, which evaluates the risks caused by multiple trafﬁc factors. The driving safety ﬁeld can reveal driver–vehicle–road interactions and their inﬂuences on driving safety, as well as predict driving safety trends owing to dynamic changes. In addition, the model can provide a new foundation for establishing driving safety measures and active vehicle control under complex trafﬁc environments.},
+	pages = {2203--2214},
+	number = {4},
+	journaltitle = {{IEEE} Transactions on Intelligent Transportation Systems},
+	shortjournal = {{IEEE} Trans. Intell. Transport. Syst.},
+	author = {Wang, Jianqiang and Wu, Jian and Li, Yang},
+	urldate = {2026-02-04},
+	date = {2015-08},
+	langid = {english},
+}
+
+@book{rajamani_vehicle_2005,
+	location = {New York},
+	title = {Vehicle dynamics and control},
+	isbn = {978-0-387-26396-0},
+	series = {Mechanical engineering series},
+	publisher = {Springer Science + Business Media},
+	author = {Rajamani, Rajesh},
+	date = {2005},
+	langid = {english},
+}
+
+@article{treiber_congested_2000,
+	title = {Congested Traffic States in Empirical Observations and Microscopic Simulations},
+	volume = {62},
+	issn = {1063-651X, 1095-3787},
+	url = {http://arxiv.org/abs/cond-mat/0002177},
+	doi = {10.1103/PhysRevE.62.1805},
+	abstract = {We present data from several German freeways showing diﬀerent kinds of congested traﬃc forming near road inhomogeneities, speciﬁcally lane closings, intersections, or uphill gradients. The states are localized or extended, homogeneous or oscillating. Combined states are observed as well, like the coexistence of moving localized clusters and clusters pinned at road inhomogeneities, or regions of oscillating congested traﬃc upstream of nearly homogeneous congested traﬃc. The experimental ﬁndings are consistent with a recently proposed theoretical phase diagram for traﬃc near on-ramps [D. Helbing, A. Hennecke, and M. Treiber, Phys. Rev. Lett. 82, 4360 (1999)]. We simulate these situations with a novel continuous microscopic single-lane model, the “intelligent driver model” ({IDM}), using the empirical boundary conditions. All observations, including the coexistence of states, are qualitatively reproduced by describing inhomogeneities with local variations of one model parameter. We show that the results of the microscopic model can be understood by formulating the theoretical phase diagram for bottlenecks in a more general way. In particular, a local drop of the road capacity induced by parameter variations has practically the same eﬀect as an on-ramp.},
+	pages = {1805--1824},
+	number = {2},
+	journaltitle = {Physical Review E},
+	shortjournal = {Phys. Rev. E},
+	author = {Treiber, Martin and Hennecke, Ansgar and Helbing, Dirk},
+	urldate = {2026-02-04},
+	date = {2000-08-01},
+	langid = {english},
+	eprinttype = {arxiv},
+	eprint = {cond-mat/0002177},
+	keywords = {Condensed Matter - Statistical Mechanics},
+}
+
+@book{treiber_traffic_2013,
+	location = {Berlin, Heidelberg},
+	title = {Traffic Flow Dynamics: Data, Models and Simulation},
+	rights = {https://www.springernature.com/gp/researchers/text-and-data-mining},
+	isbn = {978-3-642-32459-8 978-3-642-32460-4},
+	url = {https://link.springer.com/10.1007/978-3-642-32460-4},
+	doi = {10.1007/978-3-642-32460-4},
+	shorttitle = {Traffic Flow Dynamics},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Treiber, Martin and Kesting, Arne},
+	urldate = {2026-02-04},
+	date = {2013},
+	langid = {english},
+}
+
+@article{thrun_stanley_2006,
+	title = {Stanley: The robot that won the {DARPA} Grand Challenge},
+	volume = {23},
+	rights = {http://onlinelibrary.wiley.com/{termsAndConditions}\#vor},
+	issn = {1556-4959, 1556-4967},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/rob.20147},
+	doi = {10.1002/rob.20147},
+	shorttitle = {Stanley},
+	abstract = {Abstract
+            This article describes the robot Stanley, which won the 2005 {DARPA} Grand Challenge. Stanley was developed for high‐speed desert driving without manual intervention. The robot's software system relied predominately on state‐of‐the‐art artificial intelligence technologies, such as machine learning and probabilistic reasoning. This paper describes the major components of this architecture, and discusses the results of the Grand Challenge race. © 2006 Wiley Periodicals, Inc.},
+	pages = {661--692},
+	number = {9},
+	journaltitle = {Journal of Field Robotics},
+	shortjournal = {Journal of Field Robotics},
+	author = {Thrun, Sebastian and Montemerlo, Mike and Dahlkamp, Hendrik and Stavens, David and Aron, Andrei and Diebel, James and Fong, Philip and Gale, John and Halpenny, Morgan and Hoffmann, Gabriel and Lau, Kenny and Oakley, Celia and Palatucci, Mark and Pratt, Vaughan and Stang, Pascal and Strohband, Sven and Dupont, Cedric and Jendrossek, Lars‐Erik and Koelen, Christian and Markey, Charles and Rummel, Carlo and Van Niekerk, Joe and Jensen, Eric and Alessandrini, Philippe and Bradski, Gary and Davies, Bob and Ettinger, Scott and Kaehler, Adrian and Nefian, Ara and Mahoney, Pamela},
+	urldate = {2026-02-04},
+	date = {2006-09},
+	langid = {english},
+}
+
+@article{song_vehicle_2013,
+	title = {Vehicle path planning in various driving situations based on the elastic band theory for highway collision avoidance},
+	volume = {227},
+	issn = {0954-4070, 2041-2991},
+	url = {https://journals.sagepub.com/doi/10.1177/0954407013481299},
+	doi = {10.1177/0954407013481299},
+	abstract = {This paper presents an emergency path generation method which could be applied in various driving situations, such as on a straight or a curved road, and in the lane-change and lane-departure scenarios which are the most likely from a traffic viewpoint. It is based on the artificial potential approach and the elastic band theory. The assessment of the emergency path is based on the dynamic performances; the yaw rate and the lateral acceleration of the host vehicle are chosen in this paper. In order to make evasion manoeuvres steadier, a guide potential attached at the front of the obstacle vehicle and a guide potential attached at the rear of the obstacle vehicle are built to affect the moving vehicles in such a way that it encourages the host vehicle to change lane appropriately. Meanwhile, a hazard map of the road environment including the borders and the obstacle vehicles is generated. Thus the forces acting on the corresponding nodes of an elastic band should be zero because of the equilibrium condition; the trajectory with a low hazard is calculated via a numerical method. The simulation results show that the approach is acceptable and leads to a successful collision avoidance manoeuvre in various driving situations.},
+	pages = {1706--1722},
+	number = {12},
+	journaltitle = {Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering},
+	shortjournal = {Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering},
+	author = {Song, Xiaolin and Cao, Haotian and Huang, Jiang},
+	urldate = {2026-02-04},
+	date = {2013-12},
+	langid = {english},
+}
+
+@article{li_shared_2019,
+	title = {Shared control with a novel dynamic authority allocation strategy based on game theory and driving safety field},
+	volume = {124},
+	issn = {08883270},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0888327019300561},
+	doi = {10.1016/j.ymssp.2019.01.040},
+	abstract = {This paper proposes a novel dynamic control authority allocation strategy based on the elliptic driving safety ﬁeld for the game-based shared control, which aims to deal with human-automation conﬂicts during obstacle avoidance. The noncooperative game theory is used for modeling the interaction between a human driver and the trajectoryfollowing controller, where the Nash equilibrium solution is derived by distributed model predictive control ({DMPC}) approach. In addition, the elliptic driving safety ﬁeld is introduced to evaluate the driving risk by considering the driver-vehicle-road interactions under different driving contexts. The authority allocation ratio, denoting the ratio between the lateral position error weight of the human driver’s cost function and the trajectoryfollowing controller’s, is determined by the shared dynamic authority allocation strategy designed based on the evaluated driving risk. More importantly, two case studies are provided to verify the elliptic driving safety ﬁeld and the proposed dynamic authority allocation strategy on a straight or curve road. The results show that the proposed strategy can help the vehicle obtain great performance for obstacles avoidance, and the control authority is dynamically shifted between a human driver and the trajectory-following controller according to the evaluated driving risk of current driving condition.},
+	pages = {199--216},
+	journaltitle = {Mechanical Systems and Signal Processing},
+	shortjournal = {Mechanical Systems and Signal Processing},
+	author = {Li, Mingjun and Song, Xiaolin and Cao, Haotian and Wang, Jianqiang and Huang, Yanjun and Hu, Chuan and Wang, Hong},
+	urldate = {2026-02-04},
+	date = {2019-06},
+	langid = {english},
+}
+
+@article{kesting_mobil_nodate,
+	title = {{MOBIL}: General Lane-Changing Model for Car-Following Models},
+	abstract = {We propose a general model to derive lane-changing rules for discretionary and mandatory lane changes for a wide class of car-following models. Both the utility of a given lane and the risk associated with lane changes is determined in terms of longitudinal accelerations calculated with the microscopic traﬃc models. This allows for the formulation of compact and general safety and incentive criteria both for symmetric and asymmetric passing rules. Moreover, anticipative elements and the crucial inﬂuence of velocity diﬀerences of these car-following models are automatically transferred to the lane-changing rules.},
+	author = {Kesting, Arne and Treiber, Martin and Helbing, Dirk},
+	langid = {english},
+}
+
+@article{kesting_general_2007,
+	title = {General Lane-Changing Model {MOBIL} for Car-Following Models},
+	volume = {1999},
+	rights = {https://journals.sagepub.com/page/policies/text-and-data-mining-license},
+	issn = {0361-1981, 2169-4052},
+	url = {https://journals.sagepub.com/doi/10.3141/1999-10},
+	doi = {10.3141/1999-10},
+	abstract = {A general model (minimizing overall braking induced by lane change, {MOBIL}) is proposed to derive lane-changing rules for discretionary and mandatory lane changes for a wide class of car-following models. Both the utility of a given lane and the risk associated with lane changes are determined in terms of longitudinal accelerations calculated with microscopic traffic models. This determination allows for the formulation of compact and general safety and incentive criteria for both symmetric and asymmetric passing rules. Moreover, anticipative elements and the crucial influence of velocity differences of these car-following models are automatically transferred to the lane-changing rules. Although the safety criterion prevents critical lane changes and collisions, the incentive criterion takes into account the advantages and disadvantages of other drivers associated with a lane change via the “politeness factor.” The parameter allows one to vary the motivation for lane changing from purely egoistic to more cooperative driving behavior. This novel feature allows one first to prevent lane changes for a marginal advantage if they obstruct other drivers and second to let an aggressive driver induce the lane change of a slower driver ahead in order to no longer be obstructed. This phenomenon is common for asymmetric passing rules with a dedicated lane for passing. The model is applied to traffic simulations of cars and trucks with the intelligent driver model as the underlying car-following model. An open system with an on-ramp is studied, and the resulting lane-changing rate is investigated as a function of the spatial coordinate as well as a function of traffic density.},
+	pages = {86--94},
+	number = {1},
+	journaltitle = {Transportation Research Record: Journal of the Transportation Research Board},
+	shortjournal = {Transportation Research Record: Journal of the Transportation Research Board},
+	author = {Kesting, Arne and Treiber, Martin and Helbing, Dirk},
+	urldate = {2026-02-04},
+	date = {2007-01},
+	langid = {english},
 }
