Updates from Overleaf

--- a/hslu_thesis.tex
+++ b/hslu_thesis.tex
@@ -76,12 +76,13 @@ A Distributed Model Predictive Control Approach with\\
 Dynamic Authority Allocation}
 \author{Yonathan Wiess}
 \date{\today}
-
+\usepackage[style=numeric, backend=biber]{biblatex}
+\addbibresource{references.bib}
 %--------------------------------------------------------------
 % BEGIN DOCUMENT
 %--------------------------------------------------------------
 \begin{document}
-
+\cite{}
 %--------------------------------------------------------------
 % TITLE PAGE
 %--------------------------------------------------------------
@@ -1684,81 +1685,10 @@ Rate limit factor $\gamma$ & 1.5 \\
 
 
 %--------------------------------------------------------------
-% BIBLIOGRAPHY - 14 SOURCES FROM PROJECT PDFs
+% BIBLIOGRAPHY 
 %--------------------------------------------------------------
-\begin{thebibliography}{99}
 
-\bibitem{abdElmoniem2020stanley}
-AbdElmoniem, A., Osama, A., Abdelaziz, M., \& Maged, S. A. (2020).
-\textit{A path-tracking algorithm using predictive Stanley lateral controller}.
-International Journal of Advanced Robotic Systems, 17(6), 1-12.
-
-\bibitem{fernandez2012vehicle}
-Fernández, D. S. (2012).
-\textit{A Vehicle Dynamics Model for Driving Simulators}.
-Master's Thesis, Chalmers University of Technology.
-
-\bibitem{gu2014humanlike}
-Gu, T., \& Dolan, J. M. (2014).
-\textit{Toward Human-like Motion Planning in Urban Environments}.
-In IEEE Intelligent Vehicles Symposium (IV), 350-355.
-
-\bibitem{hoffmann2007stanley}
-Hoffmann, G. M., Tomlin, C. J., Montemerlo, M., \& Thrun, S. (2007).
-\textit{Autonomous Automobile Trajectory Tracking for Off-Road Driving: Controller Design, Experimental Validation and Racing}.
-In American Control Conference, 2296-2301.
-
-\bibitem{kesting2007mobil}
-Kesting, A., Treiber, M., \& Helbing, D. (2007).
-\textit{General Lane-Changing Model MOBIL for Car-Following Models}.
-Transportation Research Record: Journal of the Transportation Research Board, 1999(1), 86-94.
-
-\bibitem{li2019shared}
-Li, M., Cao, H., Song, X., Huang, Y., Wang, J., \& Huang, Z. (2019).
-\textit{Shared control with a novel dynamic authority allocation strategy based on game theory and driving safety field}.
-Mechanical Systems and Signal Processing, 124, 199-216.
-
-\bibitem{song2013vehicle}
-Song, X., Cao, H., \& Huang, J. (2013).
-\textit{Vehicle path planning in various driving situations based on the elastic band theory for highway collision avoidance}.
-Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering, 227(12), 1706-1722.
-
-\bibitem{thrun2006stanley}
-Thrun, S., Montemerlo, M., Dahlkamp, H., Stavens, D., Aron, A., Diebel, J., Fong, P., Gale, J., Halpenny, M., Hoffmann, G., Lau, K., Oakley, C., Palatucci, M., Pratt, V., Stang, P., Strohband, S., Dupont, C., Jendrossek, L.-E., Koelen, C., Markey, C., Rummel, C., van Niekerk, J., Jensen, E., Alessandrini, P., Bradski, G., Davies, B., Ettinger, S., Kaehler, A., Nefian, A., \& Mahoney, P. (2006).
-\textit{Stanley: The Robot that Won the DARPA Grand Challenge}.
-Journal of Field Robotics, 23(9), 661-692.
-
-\bibitem{treiber2013traffic}
-Treiber, M., \& Kesting, A. (2013).
-\textit{Traffic Flow Dynamics: Data, Models and Simulation}.
-Springer-Verlag Berlin Heidelberg.
-
-\bibitem{treiber2000idm}
-Treiber, M., Hennecke, A., \& Helbing, D. (2000).
-\textit{Congested Traffic States in Empirical Observations and Microscopic Simulations}.
-Physical Review E, 62(2), 1805-1824.
-
-\bibitem{rajamani2012vehicle}
-Rajamani, R. (2012).
-\textit{Vehicle Dynamics and Control} (2nd ed.).
-Springer Science+Business Media.
-
-\bibitem{wang2015driving}
-Wang, J., Wu, J., \& Li, Y. (2015).
-\textit{The Driving Safety Field Based on Driver–Vehicle–Road Interactions}.
-IEEE Transactions on Intelligent Transportation Systems, 16(4), 2203-2214.
-
-\bibitem{wang2016driving}
-Wang, J., Wu, J., Zheng, X., Ni, D., \& Li, K. (2016).
-\textit{Driving safety field theory modeling and its application in pre-collision warning system}.
-Transportation Research Part C: Emerging Technologies, 72, 306-324.
-
-\bibitem{kesting2007mobil2}
-Kesting, A., Treiber, M., \& Helbing, D. (2007).
-\textit{MOBIL: General Lane-Changing Model for Car-Following Models}.
-TRB 86th Annual Meeting Compendium of Papers.
-
-\end{thebibliography}
+\printbibliography
 
 %--------------------------------------------------------------
 % APPENDIX
